--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>L'applicazione che traccia sulla mappa tutte le rampe, piattaforme e parcheggi per persone disabili a Caltanissetta,<br> per garantire inclusione e mobilità senza limiti!</p>
                 <div>
                     <button type="button"><span></span>PIU' INFO</button>
-                    <a href="apk/CL4life.apk" download>
+                    <a href="CL4life.apk" download>
                         <button type="button"><span></span>DOWNLOAD</button>
                     </a>
                 </div>
