--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <a class="logo" style="font-size:40px; position: absolute; left: 60px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; color: rgb(0, 155, 62);">4life</a>
                 <ul>
                     <li><a href="index.html"><b>HOME</b></a></li>
-                    <li><a href=""><b>SOCIAL</b></a></li>
+                    <li><a href="https://www.instagram.com/cl4life.official/"><b>SOCIAL</b></a></li>
                     <li><a href="https://www.rapisardidavinci.edu.it/"><b>ISTITUTO</b></a></li>
                 </ul>
             </div>
@@ -19,7 +19,6 @@
                 <h1>L'ACCESSIBILITA' A PORTATA DI CLICK</h1>
                 <p>L'applicazione che traccia sulla mappa tutte le rampe, piattaforme e parcheggi per persone disabili a Caltanissetta,<br> per garantire inclusione e mobilità senza limiti!</p>
                 <div>
-                    <button type="button"><span></span>PIU' INFO</button>
                     <a href="CL4life.apk" download>
                         <button type="button"><span></span>DOWNLOAD</button>
                     </a>
