--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <body>
         <div class="banner">
             <div class="navbar">
-                <a class="logo" style="font-size:60px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; color: white;">CL</a>
-                <a class="logo" style="font-size:40px; position: absolute; left: 60px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; color: rgb(0, 155, 62);">4life</a>
+                <img class="logo" src="LOGO.png">
                 <ul>
                     <li><a href="index.html"><b>HOME</b></a></li>
                     <li><a href="https://www.instagram.com/cl4life.official/"><b>SOCIAL</b></a></li>
