--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="banner">
             <div class="navbar">
-                <img class="logo" src="LOGO.png">
+                <img src="LOGO.png" class="logo">
                 <ul>
                     <li><a href="index.html"><b>HOME</b></a></li>
                     <li><a href="https://www.instagram.com/cl4life.official/"><b>SOCIAL</b></a></li>
