--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="content">
                 <h1>L'ACCESSIBILITA' A PORTATA DI CLICK</h1>
-                <p>L'applicazione che traccia sulla mappa tutte le rampe, piattaforme e parcheggi per persone disabili a Caltanissetta,<br> per garantire inclusione e mobilità senza limiti!</p>
+                <p>L'applicazione che traccia sulla mappa rampe, piattaforme e parcheggi di Caltanissetta per persone disabili,<br> così da garantire inclusione e mobilità senza limiti!</p>
                 <div>
                     <a href="CL4life.apk" download>
                         <button type="button"><span></span>DOWNLOAD</button>
