--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1>L'ACCESSIBILITA' A PORTATA DI CLICK</h1>
                 <p>L'applicazione che traccia sulla mappa rampe, piattaforme e parcheggi di Caltanissetta per persone disabili,<br> così da garantire inclusione e mobilità senza limiti!</p>
                 <div>
-                    <a href="CL4life.apk" download>
+                    <a href="CL4lifeV1.1.0.apk" download>
                         <button type="button"><span></span>DOWNLOAD</button>
                     </a>
                 </div>
