--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="content">
                 <h1>L'ACCESSIBILITA' A PORTATA DI CLICK</h1>
-                <p>L'applicazione che individua rampe, piattaforme e ogni altra tipologia di barriere architettoniche nella città di Caltanissetta<br>al fine di garantire inclusione e mobilità alle persone con disabilità.</p>
+                <p>L'applicazione che individua rampe, piattaforme ed ogni altra tipologia di barriere architettoniche nella città di Caltanissetta<br>al fine di garantire inclusione e mobilità alle persone con disabilità.</p>
                 <div>
                     <a href="CL4lifeV1.1.0.apk" download>
                         <button type="button"><span></span>DOWNLOAD</button>
